fixed hover effects on mobile for game-section containers

--- a/static/styles.css
+++ b/static/styles.css
@@ -771,7 +771,7 @@ box-shadow: 0px 9px 0px -3px rgba(83,53,7,1);
   display: block;
   background-color: #3a2402;
   position: absolute;
-  z-index: 10;
+  z-index: -1;
   bottom: -2px;
   left: 0;
   width: 100%;
@@ -812,10 +812,6 @@ box-shadow: 0px 9px 0px -3px rgba(83,53,7,1);
   align-self: center;
   /* flex-basis: 7em; */
   /* flex: 1; */
-}
-
-.game-section:hover {
-  transform: scale(1.25);
 }
 
 .content-link {
@@ -946,7 +942,6 @@ box-shadow: 0px 9px 0px -3px rgba(83,53,7,1);
     width: unset;
     margin-top: 3rem;
   }
-  
 
   .information__container {
     display: flex;
@@ -984,5 +979,12 @@ box-shadow: 0px 9px 0px -3px rgba(83,53,7,1);
     height: 100%;
     min-width: 120px;
     min-height: 120px;
+  }
+}
+
+
+@media (hover: hover) {
+  .game-section:hover {
+    transform: scale(1.25);
   }
 }
